Add Pitch Effectiveness and Launch Angle Tightness notebooks

--- a/notebooks/6.0 - Pitch Movement and Effectiveness, Fastballs.ipynb
+++ b/notebooks/6.0 - Pitch Movement and Effectiveness, Fastballs.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 6.0 - Fastball Effectiveness\n",
+    "# 6.0 - Pitch Movement and Effectiveness, Fastballs\n",
     "Modeling fastball effectiveness."
    ]
   },
